fix fullscreen header on small screens

--- a/components/article/fullscreen_article.styl
+++ b/components/article/fullscreen_article.styl
@@ -82,8 +82,6 @@ body.body-fullscreen-article
   position: absolute
   top: 0px
   left: 0px
-  width: 100%
-  height: 100%
   height: 100vh
   width: 100vw
   z-index: 1
@@ -94,8 +92,8 @@ body.body-fullscreen-article
   background: #333
   opacity: 0.5
   min-height: 500px
-  height: 100%
-  width: 100%
+  height: 100vh
+  width: 100vw
   z-index: 1
 .article-fullscreen-text-overlay
   color: white
